--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                                 description: 'Cartão de credito',
                                 price: 28.30,
                                 quantity: 1,
-                                is_physical: true
+                                is_physical: false
                             }
                         ],
                         customer: {
